Removed background color, fixed codeblock on dark mode and fixed cookiepopup dialog on docs

--- a/src/elements/content/Content.scss
+++ b/src/elements/content/Content.scss
@@ -793,6 +793,13 @@
       word-break: break-word;
     }
 
+    .hljs {
+      table th,
+      table td {
+        border: none !important;
+      }
+    }
+
     table {
       tr:first-child {
         background-color: colors.$gray-900;
